# frontier

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  E2E_TESTING.md  IMPLEMENTATION_SUMMARY.md  NIX_SETUP.md  NNS_TESTING.md  QUICKSTART.md  REACT_QUICKJS_FIXED.md  REACT_QUICKJS_RESEARCH.md  README.md  clippy.toml  flake.nix  justfile  package.json
.github/workflows/: ci.yml
.opencode/agent/: docs.md
assets/: quickjs-demo.html  react-counter-demo.html  react-local-counter.html  react-prod-test.html  react-static-test.html  react-sync-counter.html  react-umd-counter.html  simple-counter.html  test-inline-script.html
assets/automation/: form.html
assets/react-counter/: index.html
assets/react-demos/: counter.html  index.html  temperature-converter.html  test-index.html  timer.html
docs/: CHROME.md  DOM_MUTATION_CYCLE.md  NNS.md  SCREENSHOT_TESTING.md  automation-harness.md
notes/: TEST_FINDINGS.md  innerHTML-issue.md  nns_removal.md  quickjs_followups.md  react-demos.md  react-panic.md  react-runtime.md  react_dom_bridge_handle_mismatch.md  requestAnimationFrame-issue.md  tls_followups.md  webdriver.md  wpt-unsupported.md
plans/: BLOSSOM.md  CHROME.md  IP.md  NNS_REFINEMENTS.md  NO_CERTS.md  NO_DNS.md  ideas.md  js.md  nostrdb-codex.md  quickjs.md  react-demos.md  react-followups.md  react.md  safety.md  tech-debt.md  testing.md  wpt.md
readme/: Cargo.toml  README.md  TEST_SUMMARY.md  USAGE.md  justfile
readme/src/: main.rs  readme_application.rs
readme/tests/: integration_test.rs  layout_test.rs  offline_test.rs  url_bar_navigation.rs
scripts/: ci.sh  publish_nns_claim.py  publish_nns_claim.rs  run_blossom_demo.sh  run_tests_with_fixtures.sh  test_nns_e2e.sh  test_nns_full_e2e.sh  test_server.py
scripts/hooks/: post-checkout
src/: automation.rs  chrome.rs  claim_selector.rs  input.rs  lib.rs  main.rs  navigation.rs  readme_application.rs  webdriver.rs
src/automation/: full_app.rs  headless.rs  mod.rs
src/automation_client/: mod.rs
src/blossom/: mod.rs
src/js/: bridge.rs  dom.rs  environment.rs  events.rs  mod.rs  processor.rs  runtime.rs  runtime_document.rs  script.rs  script_fetcher.rs  session.rs  timers.rs
src/markdown/: comrak.rs
src/net/: mod.rs  nostr_client.rs  relay_directory.rs  tls_verifier.rs
src/nns/: mod.rs  models.rs  resolver.rs  scoring.rs
src/storage/: mod.rs  sqlite.rs
src/tls/: mod.rs
src/wpt/: bridge.js  runner.rs  window_polyfill.js
tests/: automation_interaction.rs  automation_react_test.rs  blossom_e2e_test.rs  eventtarget_simple.rs  gui_automation_test.rs  headless_react_test.rs  nns_e2e_full_test.rs  nns_e2e_test.rs  nns_error_paths_test.rs  nns_integration_test.rs  no_dns_e2e_test.rs  online_test.rs  quickjs_dom_test.rs  quickjs_events_test.rs  quickjs_runtime.rs  quickjs_timer_test.rs  react_counter_test.rs  react_dispatch_event_test.rs  react_gui_integration_test.rs  react_timer_patch_test.rs  react_umd_e2e_test.rs  react_umd_test.rs  ui_automation_back_button.rs  webdriver_test.rs  wpt_full.rs  wpt_smoke.rs
tests/wpt/: manifest.txt  manifest_full.txt
