[package]
name = "frontier"
version = "0.1.0"
edition = "2021"

[features]
default = ["gpu"]
gpu = ["dep:anyrender_vello"]
cpu = ["cpu-pixels"]
cpu-pixels = ["cpu-base", "anyrender_vello_cpu/pixels_window_renderer"]
cpu-softbuffer = ["cpu-base", "anyrender_vello_cpu/softbuffer_window_renderer"]
cpu-base = ["dep:anyrender_vello_cpu"]
avif = ["dep:image", "image?/avif-native"]
log_frame_times = ["anyrender_vello_cpu?/log_frame_times", "anyrender_vello?/log_frame_times"]
log_phase_times = ["blitz-dom/log_phase_times"]
incremental = ["blitz-dom/incremental"]

[dependencies]
blitz-traits = { git = "https://github.com/DioxusLabs/blitz.git", rev = "e0268796a2a416de62c4819ca4bea4dffbfc499c" }
blitz-dom = { git = "https://github.com/DioxusLabs/blitz.git", rev = "e0268796a2a416de62c4819ca4bea4dffbfc499c", features = ["default", "parallel-construct"] }
blitz-html = { git = "https://github.com/DioxusLabs/blitz.git", rev = "e0268796a2a416de62c4819ca4bea4dffbfc499c" }
blitz-paint = { git = "https://github.com/DioxusLabs/blitz.git", rev = "e0268796a2a416de62c4819ca4bea4dffbfc499c", features = ["default"] }
blitz-net = { git = "https://github.com/DioxusLabs/blitz.git", rev = "e0268796a2a416de62c4819ca4bea4dffbfc499c", features = ["cookies"] }
blitz-shell = { git = "https://github.com/DioxusLabs/blitz.git", rev = "e0268796a2a416de62c4819ca4bea4dffbfc499c", features = ["tracing", "default"] }
anyrender_vello = { git = "https://github.com/DioxusLabs/blitz.git", rev = "e0268796a2a416de62c4819ca4bea4dffbfc499c", optional = true }
anyrender_vello_cpu = { git = "https://github.com/DioxusLabs/blitz.git", rev = "e0268796a2a416de62c4819ca4bea4dffbfc499c", features = ["multithreading"], optional = true }

tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "signal", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tempfile = "3.10"
futures-util = "0.3"
hyper = { version = "1", features = ["server", "http1"] }
tokio-tungstenite = "0.21"
url = { version = "2", features = ["serde"] }
winit = { version = "0.30" }
image = { version = "0.25", default-features = false, optional = true }
notify = "8.0.0"

nostr-sdk = { version = "0.31", default-features = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
directories = "5.0"
html-escape = "0.2"
serde_yaml = "0.9"
sha2 = "0.10"
anyhow = "1.0"
rustls = "0.23"
rustls_022 = { package = "rustls", version = "0.22" }
rustls-pemfile = "2.0"
webpki = "0.22"
x509-parser = "0.16"
hex = "0.4"

[dev-dependencies]
accesskit = "0.17"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs", "signal", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tempfile = "3.10"
futures-util = "0.3"
hyper = { version = "1", features = ["server", "http1"] }
tokio-tungstenite = "0.21"
tokio-rustls = "0.26"
ring = "0.17"
rcgen = "0.13"
