[package]
name = "frontier"
version = "0.1.0"
edition = "2021"
default-run = "frontier"

[features]
default = ["gpu"]
gpu = ["dep:anyrender_vello"]
cpu = ["cpu-pixels"]
cpu-pixels = ["cpu-base", "anyrender_vello_cpu/pixels_window_renderer"]
cpu-softbuffer = ["cpu-base", "anyrender_vello_cpu/softbuffer_window_renderer"]
cpu-base = ["dep:anyrender_vello_cpu"]
avif = ["dep:image", "image?/avif-native"]
log_frame_times = ["anyrender_vello_cpu?/log_frame_times", "anyrender_vello?/log_frame_times"]
log_phase_times = ["blitz-dom/log_phase_times"]
incremental = ["blitz-dom/incremental"]

[dependencies]
blitz-traits = { git = "https://github.com/DioxusLabs/blitz.git", rev = "e0268796a2a416de62c4819ca4bea4dffbfc499c" }
blitz-dom = { git = "https://github.com/DioxusLabs/blitz.git", rev = "e0268796a2a416de62c4819ca4bea4dffbfc499c", features = ["default", "parallel-construct"] }
blitz-html = { git = "https://github.com/DioxusLabs/blitz.git", rev = "e0268796a2a416de62c4819ca4bea4dffbfc499c" }
blitz-paint = { git = "https://github.com/DioxusLabs/blitz.git", rev = "e0268796a2a416de62c4819ca4bea4dffbfc499c", features = ["default"] }
blitz-net = { git = "https://github.com/DioxusLabs/blitz.git", rev = "e0268796a2a416de62c4819ca4bea4dffbfc499c", features = ["cookies"] }
blitz-shell = { git = "https://github.com/DioxusLabs/blitz.git", rev = "e0268796a2a416de62c4819ca4bea4dffbfc499c", features = ["tracing", "default"] }
anyrender_vello = { git = "https://github.com/DioxusLabs/blitz.git", rev = "e0268796a2a416de62c4819ca4bea4dffbfc499c", optional = true }
anyrender_vello_cpu = { git = "https://github.com/DioxusLabs/blitz.git", rev = "e0268796a2a416de62c4819ca4bea4dffbfc499c", features = ["multithreading"], optional = true }

tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "signal", "process", "time"] }
futures-util = "0.3"
url = { version = "2", features = ["serde"] }
winit = { version = "0.30" }
image = { version = "0.25", default-features = false, optional = true }
notify = "8.0.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rquickjs = { version = "0.7", features = ["loader", "allocator", "classes", "properties", "array-buffer", "macro"] }
kuchiki = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
html-escape = "0.2"
anyhow = "1.0"
keyboard-types = "0.7"

[dev-dependencies]
accesskit = "0.17"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs", "signal", "process", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
