[package]
name = "readme"
version = "0.1.0"
edition = "2021"

[features]
default = ["gpu", "comrak"]
gpu = ["dep:anyrender_vello"]
cpu = ["cpu-pixels"]
cpu-pixels = ["cpu-base", "anyrender_vello_cpu/pixels_window_renderer"]
cpu-softbuffer = ["cpu-base", "anyrender_vello_cpu/softbuffer_window_renderer"]
cpu-base = ["dep:anyrender_vello_cpu"]
avif = ["dep:image", "image?/avif-native"]
comrak = ["dep:comrak"]
pulldown_cmark = ["dep:pulldown-cmark"]
log_frame_times = ["anyrender_vello_cpu?/log_frame_times", "anyrender_vello?/log_frame_times"]
log_phase_times = ["blitz-dom/log_phase_times"]
incremental = ["blitz-dom/incremental"]

[dependencies]
blitz-traits = { path = "/Users/justin/code/blitz/packages/blitz-traits" }
blitz-dom = { path = "/Users/justin/code/blitz/packages/blitz-dom", features = ["default", "parallel-construct"] }
blitz-html = { path = "/Users/justin/code/blitz/packages/blitz-html" }
blitz-paint = { path = "/Users/justin/code/blitz/packages/blitz-paint", features = ["default"] }
blitz-net = { path = "/Users/justin/code/blitz/packages/blitz-net", features = ["cookies"] }
blitz-shell = { path = "/Users/justin/code/blitz/packages/blitz-shell", features = ["tracing", "default"] }
anyrender_vello = { path = "/Users/justin/code/blitz/packages/anyrender_vello", optional = true }
anyrender_vello_cpu = { path = "/Users/justin/code/blitz/packages/anyrender_vello_cpu", features = ["multithreading"], optional = true }

tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
reqwest = { version = "0.12" }
url = { version = "2" }
winit = { version = "0.30" }
comrak = { version = "0.39", default-features = false, optional = true }
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"], optional = true }
image = { version = "0.25", default-features = false, optional = true }
notify = "8.0.0"

[dev-dependencies]
accesskit = "0.17"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12" }
